# charlotte

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  justfile  lefthook.toml  main.go  tarpaulin.toml
charlotte/: Cargo.toml
charlotte/src/: lib.rs
core/: Cargo.toml
formatter/: Cargo.toml
formatter/src/: lib.rs
gencert/: Cargo.toml
gencert/src/: lib.rs  main.rs
proxy/: Cargo.toml
proxy/src/: certs.rs  gencert.rs  http.rs  lib.rs  server.rs
src/: api.rs  app.rs  cli.rs  lib.rs  main.rs  navigation.rs  proxy.rs  requests_screen.rs  waiting_screen.rs
tools/gencert/: Cargo.toml
tui/: Cargo.toml
tui/src/: app.rs  cli.rs  clipboard.rs  config.rs  http_client_screen.rs  inputmap.rs  logger.rs  main.rs  modals.rs  requests_screen.rs  screens.rs  theme.rs  waiting_screen.rs  widgets.rs
tui/src/modals/: confirm_quit_modal.rs  error_modal.rs  shortcuts_modal.rs  waiting_modal.rs
tui/src/modals/snapshots/: charlene__modals__confirm_quit_modal__tests__draw_modal.snap  charlene__modals__error_modal__tests__draw_error_modal.snap  charlene__modals__waiting_modal__tests__show_waiting_message.snap  charlotte__modals__waiting_modal__tests__show_waiting_message.snap
tui/src/screens/: http_client_screen.rs  requests_screen.rs
tui/src/snapshots/: charlene__app__tests__draw_non_modal_app.snap  charlene__app__tests__show_error_modal_message.snap  charlotte__app__tests__show_waiting_message.snap  tui__waiting_screen__tests__show_waiting_message.snap
