[workspace]
resolver = "3"
members = ["formatter", "proxy", "tui"]

[workspace.dependencies]
anyhow = "1"
insta = { version = "1.47", features = ["yaml"] }
rstest = "0.26"
thiserror = "2"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
