[package]
name = "charlotte"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
rcgen = "0.13.2"
rustls = { version = "0.23.28", features = ["ring", "std"] }
thiserror.workspace = true
tokio.workspace = true
