[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
