[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
rcgen.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
rstest.workspace = true
