[package]
name = "charlotte"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.6", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
proxy = { path = "../proxy" }
ratatui = "0.30"
ratatui-textarea = "0.9"
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
