[package]
name = "charlene"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.6", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
formatter = { path = "../formatter" }
proxy = { path = "../proxy" }
ratatui = "0.30"
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
arboard = { version = "3.6", features = [
    "wayland-data-control",
], default-features = false }

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
